30-cloud/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:apache
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/html/data
            - name: config
              mountPath: /var/www/html/config
      volumes:
        - name: data
          hostPath:
            path: /tank/data/nextcloud
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /tank/app/nextcloud
            type: DirectoryOrCreate
