30-cloud/nextcloud/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: cloud
  labels:
    app: nextcloud-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: nextcloud-db
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: cloud
spec:
  selector:
    app: nextcloud-db
  ports:
    - port: 5432
      targetPort: 5432
