30-cloud/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: 80
